# senior-thesis

./: .gitignore  README.md  meeting-notes.md  thesis-blog.md
hello-cpp/: gray-scale.cpp  gray-scale.hpp  load-display.cpp  test
hello-cython/: ex.c  example_cython.pyx  setup.py  testing-things.py  testing.py
hello-grayscale/: grayscale.html  simple-image-gs.js
hello-grayscale-pyscript/: grayscale-no-html.py  image_upload.py
hello-jmp-flood/: jmp-flood.py
hello-jmp-flood/images/: jump-flood-input
hello-python/grayscale/: grayscale.html
hello-python/jmp-flood/: notes.md
hello-world/: grayscale.html
hello-world/matter-for-aria/: angles.html  pendulum.html
matter/matter-for-aria/: lamp.html
old/hello-cpp/: Makefile  jfa.cpp  load-display.hpp
old/hello-cython/: ex.c  example_cython.c  setup.py  testing.py
old/hello-js/: grayscale.css  hello-image.py  vanilla-gs.js
old/hello-python/: load-display.py
old/hello-python/grayscale/: grayscale-no-html.py  gs-opencv.py
old/hello-python/jmp-flood/: jmp-flood.py
open_cv/ETF-lines/: CMakeLists.txt  ETF.cpp  ETF.hpp  Sobel.cpp  sobel_operator.cpp  sobel_operator.hpp  test_sobel.cpp  test_sobel.hpp  tests.cpp  tests.hpp
open_cv/boiler-plate/: CIEprocess.cpp  CIEprocess.hpp  invert.cpp  invert.hpp  read-save.cpp  read-save.hpp  type-check.cpp  type-check.hpp  type2str.hpp
open_cv/diff-of-gaussians/: CMakeLists.txt  DoG.cpp  DoG.hpp  extract-edges.cpp  extract-edges.hpp  gray-scale.cpp  skeleton.cpp  skeleton.hpp  threshold-edges.cpp  threshold-edges.hpp  threshold2.cpp
open_cv/distance-map/: CMakeLists.txt  combine.cpp  combine.hpp  distance-map.cpp  distance-map.hpp  distance-map2.cpp  distance-map2.hpp  ditance-map.cpp  full-map.cpp  full-map.hpp  fullMap.cpp  fullMap.hpp  jfa.cpp  jfa.hpp  offset-map.cpp  offset-map.hpp  read-save.cpp  read-save.hpp  sampled-transform-2.cpp  sampled-transform-2.hpp  sampled-transform-seeds.cpp  sampled-transform-seeds.hpp  sampled-transform.cpp  sampled-transform.hpp  tests.cpp  tests.hpp
open_cv/dots/: CMakeLists.txt  adjust-cells.cpp  adjust-cells.hpp  dots.cpp  dots.hpp  place-dots.cpp  place-dots.hpp  place-seeds.cpp  place-seeds.hpp  tests.cpp  tests.hpp
open_cv/edge-detection/: CMakeLists.txt  DoG.cpp  DoG.hpp  canny.cpp  canny.hpp  close-gaps.cpp  close-gaps.hpp  extract-edges.cpp  extract-edges.hpp  gray-scale.cpp  gray-scale.hpp  read-save.cpp  skeleton.cpp  skeleton.hpp  tests.cpp  tests.hpp  threshold-edges.cpp  threshold-edges.hpp  threshold2.cpp  type2str.cpp
open_cv/isophotes/: CMakeLists.txt  extract-isophotes.cpp  extract-isophotes.hpp  isophotes.cpp  isophotes.hpp  read-save.cpp  read.cpp  save.cpp  tests.cpp  tests.hpp
open_cv/jfa/: CMakeLists.txt  jfa.cpp  jfa.hpp
open_cv/kitten-caboodle/: CMakeLists.txt  caboodle.cpp  caboodle.hpp  caboodle2.cpp  caboodle3.cpp  render.cpp  type2str.cpp
open_cv/prev-attempts/: distance-map.cpp  distance-map.hpp  jfa.hpp  jfa2.cpp  sampled-transform-2.hpp  sampled-transform.hpp
open_cv/render/: CMakeLists.txt  render.cpp  render.hpp
open_cv/thingy-thangs/: CMakeLists.txt  compare-gs.cpp  compare-gs.hpp  main.cpp  main.hpp  match-circles.cpp  match-circles.hpp  match_tone.cpp  match_tone.hpp  read-save.cpp
thesisdoc/: thesis.aux  thesis.bbl  thesis.bib  thesis.blg  thesis.lof  thesis.lot  thesis.tex  thesis.toc
